--- a/phase_2/week_3/1_3/pandas_cleaning_exercise.ipynb
+++ b/phase_2/week_3/1_3/pandas_cleaning_exercise.ipynb
@@ -1,11 +1,95 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cleaning MLS Dataset\n",
+    "\n",
+    "In an attempt to scout prospective players, we would like to analyze a dataset of MLS players in 2020.\n",
+    "\n",
+    "However, before we can submit this dataframe for analysis, we must clean this csv file.\n",
+    "\n",
+    "Walk through each line of pseudo-code step-by-step and implement to create a properly formatted dataframe.\n",
+    "\n",
+    "More info on dataframe here: https://www.kaggle.com/datasets/josephvm/major-league-soccer-dataset?select=all_players.csv "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# load in your dataframe\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# find out how many rows have null values\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# drop each row that has more than 4 missing values\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# count how many null values the \"SOG%\" column has\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# drop the SOG% column from the dataframe\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# compute the avg MINS for all players and save to a variable called \"mean_MINS\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# filter the dataframe to only include players that have above average minutes\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print out the top 5 players with above average MINS\n"
+   ]
   }
  ],
  "metadata": {
