--- a/phase_2/week_3/1_3/pandas_cleaning_notes.ipynb
+++ b/phase_2/week_3/1_3/pandas_cleaning_notes.ipynb
@@ -30,12 +30,26 @@
    "metadata": {},
    "source": [
     "## Missing Values\n",
-    "\n"
+    "\n",
+    "We cannot progress with exploration & analysis until our dataframe is correctly formatted.\n",
+    "“Garbage in, garbage out.”\n",
+    "“Bad data in, bad predictions out.”\n",
+    "\n",
+    "Let’s consider where our dataframe fails:\n",
+    "\n",
+    "How many values are we missing in the “Goals” column?\n",
+    "\t57\n",
+    "Do you notice anything odd when grouping players by country?\n",
+    "\tTwo Netherlands?\n",
+    "What are the average goals per player for a soccer season?\n",
+    "\t11.77\n",
+    "Which country and year had the highest count of soccer players who score above average goals?\t\n",
+    "    England - 2018"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +196,7 @@
        "4                     1.25  2016  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -215,9 +229,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "57"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "missing_goals = df[df[\"Goals\"].isna()]\n",
     "\n",
@@ -229,21 +254,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## "
+    "What do missing values look like?\n",
+    "\n",
+    "Sometimes we will see some placeholder value that indicates a value is missing. \n",
+    "\n",
+    "If a dataset is properly documented, we should see some information such as “0 = missing data” or \n",
+    "“N/A = missing data.”\n",
+    "\n",
+    "Sometimes we can also intuitively understand that some data is missing, although we always want documentation.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "nan"
+       "11.772802653399669"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,6 +293,22 @@
    "source": [
     "above_avg_goals = df[df[\"Goals\"] > mean].groupby([\"Country\", \"Year\"])[\"Goals\"].count().sort_values()\n",
     "above_avg_goals"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Why is missing data important?\n",
+    "\n",
+    "Well, let’s consider the mean of our “Goal” column in our sample dataset.\n",
+    "\n",
+    "    11.7728\n",
+    "\n",
+    "Let us then view the mean of our “Goal” column in our population dataset “scorers_full.csv”\n",
+    "\n",
+    "\t11.8300\n"
    ]
   },
   {
@@ -287,13 +335,110 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The difference is marginal (11.8300 - 11.7728), due to the central limit theorem (sample is good enough estimate of population).\n",
+    "\n",
+    "However, we cannot leave this data as is.\n",
+    "\n",
+    "This missing data will prevent us from calculating statistics on our dataset such as mean & max."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cleaning a DataFrame\n",
+    "\n",
+    "The strategy we use to handle this data will lead us to different calculations. \n",
+    "We can either:\n",
+    "Drop missing data.\n",
+    "\n",
+    "Could potentially drop entire column. The cut off varies from data-scientist to data-scientist, and project to project. (10%, 20%, 50%, 70%)\n",
+    "\n",
+    "Replace missing data.\n",
+    "\n",
+    "Usually with some statistic of the dataset. (Mean, median, mode, or some simulated data).\n",
+    "Whatever we do, we must document. (Ex: Dropped columns “xG” and “avgxG” since our analysis is not dependent on it.)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dropping\n",
+    "\n",
+    "This, of course, skews our data in some direction. \n",
+    "If we have a good chunk (relative term) of data missing, it’ll be better to simply remove the column and document it as unusable.\n",
+    "\n",
+    "Ex: 50% of rows missing goal data. Do I really want to drop 50% of my data?\n",
+    "\n",
+    "Especially considering the central limit theorem, we should have at least 30 samples per data-type. "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11.772802653399669"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dropna(subset=\"Goals\", inplace=True)\n",
+    "df[\"Goals\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "missing_goals = df[df[\"Goals\"].isna()]\n",
+    "\n",
+    "len(missing_goals)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dropping Columns\n",
+    "\n",
+    "Like mentioned before, sometimes we would like to drop columns:\n",
+    "Either to simply remove irrelevant information.\n",
+    "\n",
+    "Or to drop an usable column."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +467,6 @@
        "      <th>Club</th>\n",
        "      <th>Player Names</th>\n",
        "      <th>Matches_Played</th>\n",
-       "      <th>Substitution</th>\n",
        "      <th>Mins</th>\n",
        "      <th>Goals</th>\n",
        "      <th>Shots</th>\n",
@@ -340,7 +484,6 @@
        "      <td>(BET)</td>\n",
        "      <td>Juanmi Callejon</td>\n",
        "      <td>19.0</td>\n",
-       "      <td>16.0</td>\n",
        "      <td>1849.0</td>\n",
        "      <td>11.0</td>\n",
        "      <td>48.0</td>\n",
@@ -356,7 +499,6 @@
        "      <td>(BAR)</td>\n",
        "      <td>Antoine Griezmann</td>\n",
        "      <td>36.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>3129.0</td>\n",
        "      <td>16.0</td>\n",
        "      <td>88.0</td>\n",
@@ -372,7 +514,6 @@
        "      <td>(ATL)</td>\n",
        "      <td>Luis Suarez</td>\n",
        "      <td>34.0</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>2940.0</td>\n",
        "      <td>28.0</td>\n",
        "      <td>120.0</td>\n",
@@ -388,7 +529,6 @@
        "      <td>(VAL)</td>\n",
        "      <td>Kevin Gameiro</td>\n",
        "      <td>21.0</td>\n",
-       "      <td>10.0</td>\n",
        "      <td>1745.0</td>\n",
        "      <td>13.0</td>\n",
        "      <td>50.0</td>\n",
@@ -404,7 +544,6 @@
        "      <td>(JUV)</td>\n",
        "      <td>Cristiano Ronaldo</td>\n",
        "      <td>29.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>2634.0</td>\n",
        "      <td>25.0</td>\n",
        "      <td>162.0</td>\n",
@@ -418,85 +557,46 @@
        "</div>"
       ],
       "text/plain": [
-       "  Country   League   Club       Player Names  Matches_Played  Substitution   \\\n",
-       "0   Spain  La Liga  (BET)    Juanmi Callejon            19.0           16.0   \n",
-       "1   Spain  La Liga  (BAR)  Antoine Griezmann            36.0            0.0   \n",
-       "2   Spain  La Liga  (ATL)        Luis Suarez            34.0            1.0   \n",
-       "4   Spain  La Liga  (VAL)      Kevin Gameiro            21.0           10.0   \n",
-       "5   Spain  La Liga  (JUV)  Cristiano Ronaldo            29.0            0.0   \n",
+       "  Country   League   Club       Player Names  Matches_Played    Mins  Goals  \\\n",
+       "0   Spain  La Liga  (BET)    Juanmi Callejon            19.0  1849.0   11.0   \n",
+       "1   Spain  La Liga  (BAR)  Antoine Griezmann            36.0  3129.0   16.0   \n",
+       "2   Spain  La Liga  (ATL)        Luis Suarez            34.0  2940.0   28.0   \n",
+       "4   Spain  La Liga  (VAL)      Kevin Gameiro            21.0  1745.0   13.0   \n",
+       "5   Spain  La Liga  (JUV)  Cristiano Ronaldo            29.0  2634.0   25.0   \n",
        "\n",
-       "     Mins  Goals  Shots  OnTarget  Shots Per Avg Match  \\\n",
-       "0  1849.0   11.0   48.0      20.0                 2.47   \n",
-       "1  3129.0   16.0   88.0      41.0                 2.67   \n",
-       "2  2940.0   28.0  120.0      57.0                 3.88   \n",
-       "4  1745.0   13.0   50.0      23.0                 2.72   \n",
-       "5  2634.0   25.0  162.0      60.0                 5.84   \n",
-       "\n",
-       "   On Target Per Avg Match  Year  \n",
-       "0                     1.03  2016  \n",
-       "1                     1.24  2016  \n",
-       "2                     1.84  2016  \n",
-       "4                     1.25  2016  \n",
-       "5                     2.16  2016  "
+       "   Shots  OnTarget  Shots Per Avg Match  On Target Per Avg Match  Year  \n",
+       "0   48.0      20.0                 2.47                     1.03  2016  \n",
+       "1   88.0      41.0                 2.67                     1.24  2016  \n",
+       "2  120.0      57.0                 3.88                     1.84  2016  \n",
+       "4   50.0      23.0                 2.72                     1.25  2016  \n",
+       "5  162.0      60.0                 5.84                     2.16  2016  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.dropna(subset=\"Goals\", inplace=True)\n",
+    "#df.drop(columns=[\"Substitution \"], inplace=True)\n",
     "df.head()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 30,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "missing_goals = df[df[\"Goals\"].isna()]\n",
-    "\n",
-    "len(missing_goals)"
+    "Notice how `Substitution` is not found in our axis. This is because the column"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "\"['Substitution'] not found in axis\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\saidmf\\Desktop\\TKH\\DS_22\\phase_2\\week_3\\1_3\\pandas_cleaning_notes.ipynb Cell 12\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_2/week_3/1_3/pandas_cleaning_notes.ipynb#X14sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m df\u001b[39m.\u001b[39;49mdrop(columns\u001b[39m=\u001b[39;49m[\u001b[39m\"\u001b[39;49m\u001b[39mSubstitution\u001b[39;49m\u001b[39m\"\u001b[39;49m], inplace\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_2/week_3/1_3/pandas_cleaning_notes.ipynb#X14sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m df\u001b[39m.\u001b[39mhead()\n",
-      "File \u001b[1;32mc:\\Python310\\lib\\site-packages\\pandas\\util\\_decorators.py:311\u001b[0m, in \u001b[0;36mdeprecate_nonkeyword_arguments.<locals>.decorate.<locals>.wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    305\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(args) \u001b[39m>\u001b[39m num_allow_args:\n\u001b[0;32m    306\u001b[0m     warnings\u001b[39m.\u001b[39mwarn(\n\u001b[0;32m    307\u001b[0m         msg\u001b[39m.\u001b[39mformat(arguments\u001b[39m=\u001b[39marguments),\n\u001b[0;32m    308\u001b[0m         \u001b[39mFutureWarning\u001b[39;00m,\n\u001b[0;32m    309\u001b[0m         stacklevel\u001b[39m=\u001b[39mstacklevel,\n\u001b[0;32m    310\u001b[0m     )\n\u001b[1;32m--> 311\u001b[0m \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
-      "File \u001b[1;32mc:\\Python310\\lib\\site-packages\\pandas\\core\\frame.py:4954\u001b[0m, in \u001b[0;36mDataFrame.drop\u001b[1;34m(self, labels, axis, index, columns, level, inplace, errors)\u001b[0m\n\u001b[0;32m   4806\u001b[0m \u001b[39m@deprecate_nonkeyword_arguments\u001b[39m(version\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, allowed_args\u001b[39m=\u001b[39m[\u001b[39m\"\u001b[39m\u001b[39mself\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mlabels\u001b[39m\u001b[39m\"\u001b[39m])\n\u001b[0;32m   4807\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdrop\u001b[39m(\n\u001b[0;32m   4808\u001b[0m     \u001b[39mself\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   4815\u001b[0m     errors: \u001b[39mstr\u001b[39m \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mraise\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m   4816\u001b[0m ):\n\u001b[0;32m   4817\u001b[0m     \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m   4818\u001b[0m \u001b[39m    Drop specified labels from rows or columns.\u001b[39;00m\n\u001b[0;32m   4819\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   4952\u001b[0m \u001b[39m            weight  1.0     0.8\u001b[39;00m\n\u001b[0;32m   4953\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m-> 4954\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49mdrop(\n\u001b[0;32m   4955\u001b[0m         labels\u001b[39m=\u001b[39;49mlabels,\n\u001b[0;32m   4956\u001b[0m         axis\u001b[39m=\u001b[39;49maxis,\n\u001b[0;32m   4957\u001b[0m         index\u001b[39m=\u001b[39;49mindex,\n\u001b[0;32m   4958\u001b[0m         columns\u001b[39m=\u001b[39;49mcolumns,\n\u001b[0;32m   4959\u001b[0m         level\u001b[39m=\u001b[39;49mlevel,\n\u001b[0;32m   4960\u001b[0m         inplace\u001b[39m=\u001b[39;49minplace,\n\u001b[0;32m   4961\u001b[0m         errors\u001b[39m=\u001b[39;49merrors,\n\u001b[0;32m   4962\u001b[0m     )\n",
-      "File \u001b[1;32mc:\\Python310\\lib\\site-packages\\pandas\\core\\generic.py:4267\u001b[0m, in \u001b[0;36mNDFrame.drop\u001b[1;34m(self, labels, axis, index, columns, level, inplace, errors)\u001b[0m\n\u001b[0;32m   4265\u001b[0m \u001b[39mfor\u001b[39;00m axis, labels \u001b[39min\u001b[39;00m axes\u001b[39m.\u001b[39mitems():\n\u001b[0;32m   4266\u001b[0m     \u001b[39mif\u001b[39;00m labels \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m-> 4267\u001b[0m         obj \u001b[39m=\u001b[39m obj\u001b[39m.\u001b[39;49m_drop_axis(labels, axis, level\u001b[39m=\u001b[39;49mlevel, errors\u001b[39m=\u001b[39;49merrors)\n\u001b[0;32m   4269\u001b[0m \u001b[39mif\u001b[39;00m inplace:\n\u001b[0;32m   4270\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_update_inplace(obj)\n",
-      "File \u001b[1;32mc:\\Python310\\lib\\site-packages\\pandas\\core\\generic.py:4311\u001b[0m, in \u001b[0;36mNDFrame._drop_axis\u001b[1;34m(self, labels, axis, level, errors, consolidate, only_slice)\u001b[0m\n\u001b[0;32m   4309\u001b[0m         new_axis \u001b[39m=\u001b[39m axis\u001b[39m.\u001b[39mdrop(labels, level\u001b[39m=\u001b[39mlevel, errors\u001b[39m=\u001b[39merrors)\n\u001b[0;32m   4310\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m-> 4311\u001b[0m         new_axis \u001b[39m=\u001b[39m axis\u001b[39m.\u001b[39;49mdrop(labels, errors\u001b[39m=\u001b[39;49merrors)\n\u001b[0;32m   4312\u001b[0m     indexer \u001b[39m=\u001b[39m axis\u001b[39m.\u001b[39mget_indexer(new_axis)\n\u001b[0;32m   4314\u001b[0m \u001b[39m# Case for non-unique axis\u001b[39;00m\n\u001b[0;32m   4315\u001b[0m \u001b[39melse\u001b[39;00m:\n",
-      "File \u001b[1;32mc:\\Python310\\lib\\site-packages\\pandas\\core\\indexes\\base.py:6644\u001b[0m, in \u001b[0;36mIndex.drop\u001b[1;34m(self, labels, errors)\u001b[0m\n\u001b[0;32m   6642\u001b[0m \u001b[39mif\u001b[39;00m mask\u001b[39m.\u001b[39many():\n\u001b[0;32m   6643\u001b[0m     \u001b[39mif\u001b[39;00m errors \u001b[39m!=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mignore\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[1;32m-> 6644\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mlist\u001b[39m(labels[mask])\u001b[39m}\u001b[39;00m\u001b[39m not found in axis\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m   6645\u001b[0m     indexer \u001b[39m=\u001b[39m indexer[\u001b[39m~\u001b[39mmask]\n\u001b[0;32m   6646\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdelete(indexer)\n",
-      "\u001b[1;31mKeyError\u001b[0m: \"['Substitution'] not found in axis\""
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.drop(columns=[\"Substitution\"], inplace=True)\n",
-    "df.head()"
+    "mean  = df[\"Goals\"].mean()"
    ]
   },
   {
@@ -506,7 +606,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "nan"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"../data/scorers.csv\")\n",
+    "mean  =  df[\"Goals\"].mean(skipna=False)\n",
+    "mean"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.756060606060606"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"../data/scorers.csv\")\n",
+    "zero_filled  =  df[\"Goals\"].fillna(0)\n",
+    "zero_filled.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -515,29 +664,14 @@
        "11.772802653399669"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[\"Goals\"].mean()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv(\"../data/scorers.csv\")\n",
-    "mean  =  df[\"Goals\"].mean(skipna=False)\n",
-    "mean"
+    "mean_filled  =  df[\"Goals\"].fillna(mean)\n",
+    "mean_filled.mean()"
    ]
   }
  ],
