--- a/phase_2/week_6/Lab/sql_lab.ipynb
+++ b/phase_2/week_6/Lab/sql_lab.ipynb
@@ -84,7 +84,7 @@
     "CREATE TABLE airport_city(\n",
     "    airlineID VARCHAR(3) NOT NULL,\n",
     "    ap_name VARCHAR(100) NOT NULL,\n",
-    "    PRIMARY KEY(airlineID, ap_name),\n",
+    "    PRIMARY KEY(airlineID, ap_name)\n",
     ");\n",
     "\n",
     "INSERT INTO airport_city (airlineID, ap_name) VALUES('AA','Louisville International airport');\n",
