--- a/phase_2/week_6/Lab/sql_lab.ipynb
+++ b/phase_2/week_6/Lab/sql_lab.ipynb
@@ -59,16 +59,16 @@
     "    acres INT\n",
     ");\n",
     "\n",
-    "INSERT INTO airport (ap_name, state, country, cname, code) VALUES('Louisville Muhammad Ali International Airport','Kentucky','United States','Louisville', 'SDF', 1500);\n",
-    "INSERT INTO airport (ap_name, state, country, cname, code) VALUES('Dallas/Fort Worth International Airport','Texas','United States','Fort Worth', 'DFW', 17207 );\n",
-    "INSERT INTO airport (ap_name, state, country, cname, code) VALUES('San Francisco International Airport','California', 'United States','San Francisco', 'SFO', 5207);\n",
-    "INSERT INTO airport (ap_name, state, country, cname, code) VALUES('George Bush Intercontinental Airport','Texas','United States','Houston', 'IAH', 10000);\n",
-    "INSERT INTO airport (ap_name, state, country, cname, code) VALUES('John F. Kennedy International Airport','New York','United States','New York city', 'JFK', 4930);\n",
-    "INSERT INTO airport (ap_name, state, country, cname, code) VALUES('LaGuardia Airport','New York','United States','New York city', 'LGA', 680);\n",
-    "INSERT INTO airport (ap_name, state, country, cname, code) VALUES('Tampa International Airport','Florida', 'United States','Tampa', 'TPA', 3300);\n",
-    "INSERT INTO airport (ap_name, state, country, cname, code) VALUES('Austin-Bergstrom International Airport','Texas', 'United States','Austin', 'AUS', 4242);\n",
-    "INSERT INTO airport (ap_name, state, country, cname, code) VALUES('Hartsfield-Jackson Atlanta International Airport','Georgia', 'United States','Atlanta', 'ATL', 4930);\n",
-    "INSERT INTO airport (ap_name, state, country, cname, code) VALUES('Daniel K. Inouye International Airport','Hawaii', 'United States','Honolulu', 'HNL', 4220);\n",
+    "INSERT INTO airport  VALUES('Louisville Muhammad Ali International Airport','Kentucky','United States','Louisville', 'SDF', 1500);\n",
+    "INSERT INTO airport  VALUES('Dallas/Fort Worth International Airport','Texas','United States','Fort Worth', 'DFW', 17207 );\n",
+    "INSERT INTO airport VALUES('San Francisco International Airport','California', 'United States','San Francisco', 'SFO', 5207);\n",
+    "INSERT INTO airport  VALUES('George Bush Intercontinental Airport','Texas','United States','Houston', 'IAH', 10000);\n",
+    "INSERT INTO airport VALUES('John F. Kennedy International Airport','New York','United States','New York city', 'JFK', 4930);\n",
+    "INSERT INTO airport  VALUES('LaGuardia Airport','New York','United States','New York city', 'LGA', 680);\n",
+    "INSERT INTO airport  VALUES('Tampa International Airport','Florida', 'United States','Tampa', 'TPA', 3300);\n",
+    "INSERT INTO airport  VALUES('Austin-Bergstrom International Airport','Texas', 'United States','Austin', 'AUS', 4242);\n",
+    "INSERT INTO airport  VALUES('Hartsfield-Jackson Atlanta International Airport','Georgia', 'United States','Atlanta', 'ATL', 4930);\n",
+    "INSERT INTO airport VALUES('Daniel K. Inouye International Airport','Hawaii', 'United States','Honolulu', 'HNL', 4220);\n",
     "\n",
     "CREATE TABLE airline(\n",
     "    airlineID VARCHAR(3) primary key,\n",
