--- a/phase_2/week_6/Lab/sql_lab.ipynb
+++ b/phase_2/week_6/Lab/sql_lab.ipynb
@@ -158,7 +158,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Insert the following data into your `flights` table"
+    "Insert the following data into your `flight` table"
    ]
   },
   {
@@ -171,31 +171,31 @@
    },
    "outputs": [],
    "source": [
-    "INSERT INTO FLIGHT(flight_code, source, destination, status, airlineid) VALUES('AA2014','SDF','DFW', 'On-Time', 'AA');\n",
+    "INSERT INTO flight(flight_code, source, destination, status, airlineid) VALUES('AA2014','SDF','DFW', 'On-Time', 'AA');\n",
     "\n",
-    "INSERT INTO FLIGHT(flight_code, source, destination, status, airlineid) VALUES('AA2305','SDF','JFK', 'Delayed', 'AA');\n",
+    "INSERT INTO flight(flight_code, source, destination, status, airlineid) VALUES('AA2305','SDF','JFK', 'Delayed', 'AA');\n",
     "\n",
-    "INSERT INTO FLIGHT(flight_code, source, destination, status, airlineid) VALUES('UAL2555','SDF','LGA', 'Delayed', 'UAL');\n",
+    "INSERT INTO flight(flight_code, source, destination, status, airlineid) VALUES('UAL2555','SDF','LGA', 'Delayed', 'UAL');\n",
     "\n",
-    "INSERT INTO FLIGHT(flight_code, source, destination, status, airlineid) VALUES('DL2008','SDF','AUS', 'On-Time', 'DL');\n",
+    "INSERT INTO flight(flight_code, source, destination, status, airlineid) VALUES('DL2008','SDF','AUS', 'On-Time', 'DL');\n",
     "\n",
-    "INSERT INTO FLIGHT(flight_code, source, destination, status, airlineid) VALUES('DL2034','JFK','AUS', 'Delayed', 'DL');\n",
+    "INSERT INTO flight(flight_code, source, destination, status, airlineid) VALUES('DL2034','JFK','AUS', 'Delayed', 'DL');\n",
     "\n",
-    "INSERT INTO FLIGHT(flight_code, source, destination, status, airlineid) VALUES('DL2345','JFK','HNL', 'Delayed', 'DL');\n",
+    "INSERT INTO flight(flight_code, source, destination, status, airlineid) VALUES('DL2345','JFK','HNL', 'Delayed', 'DL');\n",
     "\n",
-    "INSERT INTO FLIGHT(flight_code, source, destination, status, airlineid) VALUES('WN634','JFK','TPA', 'Delayed', 'WN');\n",
+    "INSERT INTO flight(flight_code, source, destination, status, airlineid) VALUES('WN634','JFK','TPA', 'Delayed', 'WN');\n",
     "\n",
-    "INSERT INTO FLIGHT(flight_code, source, destination, status, airlineid) VALUES('AA2874','LGA','ATL', 'Delayed', 'AA');\n",
+    "INSERT INTO flight(flight_code, source, destination, status, airlineid) VALUES('AA2874','LGA','ATL', 'Delayed', 'AA');\n",
     "\n",
-    "INSERT INTO FLIGHT(flight_code, source, destination, status, airlineid) VALUES('WN888','SFO','HNL', 'On-Time', 'WN');\n",
+    "INSERT INTO flight(flight_code, source, destination, status, airlineid) VALUES('WN888','SFO','HNL', 'On-Time', 'WN');\n",
     "\n",
-    "INSERT INTO FLIGHT(flight_code, source, destination, status, airlineid) VALUES('DL7553','SFO','TPA', 'Delayed', 'DL');\n",
+    "INSERT INTO flight(flight_code, source, destination, status, airlineid) VALUES('DL7553','SFO','TPA', 'Delayed', 'DL');\n",
     "\n",
-    "INSERT INTO FLIGHT(flight_code, source, destination, status, airlineid) VALUES('AA7008','SFO','JFK', 'Delayed', 'AA');\n",
+    "INSERT INTO flight(flight_code, source, destination, status, airlineid) VALUES('AA7008','SFO','JFK', 'Delayed', 'AA');\n",
     "\n",
-    "INSERT INTO FLIGHT(flight_code, source, destination, status, airlineid) VALUES('AA7008','SFO','ATL', 'Delayed', 'AA');\n",
+    "INSERT INTO flight(flight_code, source, destination, status, airlineid) VALUES('AA7008','SFO','ATL', 'Delayed', 'AA');\n",
     "\n",
-    "INSERT INTO FLIGHT(flight_code, source, destination, status, airlineid) VALUES('UAL1212','SFO','IAH', 'On-Time', 'UAL');"
+    "INSERT INTO flight(flight_code, source, destination, status, airlineid) VALUES('UAL1212','SFO','IAH', 'On-Time', 'UAL');"
    ]
   },
   {
