--- a/phase_2/week_7/1_17/sql_II_notes.ipynb
+++ b/phase_2/week_7/1_17/sql_II_notes.ipynb
@@ -430,7 +430,7 @@
     "    name VARCHAR(100),\n",
     "    course VARCHAR(50),\n",
     "    lab_name VARCHAR(50),\n",
-    "    grade\n",
+    "    grade FLOAT\n",
     ");"
    ]
   },
