--- a/phase_2/week_7/Lab/sql_II_lab_notes.ipynb
+++ b/phase_2/week_7/Lab/sql_II_lab_notes.ipynb
@@ -1,9 +1,86 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Data Journalism\n",
+    "\n",
+    "Data Engineering/Analytics is not just reserved for purely “business” applications\n",
+    "\n",
+    "Along with the proliferation of the internet & massive tech companies, journalism has now begun to benefit from “data-oriented” individuals.\n",
+    "\n",
+    "Namely data journalism is the practice of documenting & presenting real-world-events using data science & visualizations "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Subqueries\n",
+    "\n",
+    "A super useful feature of postgres, and at this point, most flavors of SQL are correlated subqueries aka subqueries\n",
+    "\n",
+    "Subqueries allow us to utilize information pulled from a subquery in a outer query\n",
+    "\n",
+    "```sql\n",
+    "    SELECT … --This can be an UPDATE or DELETE clause, for now we will only use SELECT\n",
+    "    FROM outer_table p  -- Loop through each row of outer_table “p”\n",
+    "    WHERE EXPR (    -- This is a boolean operator\n",
+    "        SELECT … FROM inner_table i WHERE  …    -- Only select the rows from the outer table that meet the criteria of the inner query\n",
+    ") ;\n",
+    "```\n",
+    "\n",
+    "The expressions we can use with our subqueries include:\n",
+    "\n",
+    "* EXISTS : Select row if the subquery produces a table with at least one row\n",
+    "* IN  : Select row if attribute exists in subquery that returns column or static list \n",
+    "* ANY or SOME : Select row if attribute equal, not equal, etc to any row from subquery\n",
+    "* ALL : Select row if attribute equal, not equal, etc to all rows from subquery\n",
+    "\n",
+    "https://www.postgresql.org/docs/current/functions-subquery.html#FUNCTIONS-SUBQUERY-NOTIN "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## EXISTS\n",
+    "\n",
+    "This EXISTS expression selects all rows from the subquery table if it produces at least one row."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "SELECT *\n",
+    "FROM flight f\n",
+    "WHERE EXISTS\n",
+    "\t( \n",
+    "\t\tSELECT * \n",
+    "\t \tFROM airline_city ac \n",
+    "\t\tWHERE f.destination = ac.code and f.airlineid = ac.airlineid\n",
+    "\t)\n",
+    ";"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "alternatively, we also have `NOT EXISTS`"
+   ]
   },
   {
    "cell_type": "code",
@@ -24,6 +101,134 @@
     "\t\tWHERE f.destination = ac.code and f.airlineid = ac.airlineid\n",
     "\t)\n",
     ";"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## IN \n",
+    "\n",
+    "This IN expression selects all rows from the table that exist within the subquery.\n",
+    "\n",
+    "The query below searches through the `airline_city` table, and only selects the rows where the airline is listed in the `flights` table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "SELECT *\n",
+    "FROM airline_city ac\n",
+    "WHERE ac.airlineid IN ( \n",
+    "    SELECT  f.airlineid FROM flight f\n",
+    ") ;"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This IN expression can also be used to select rows from a static list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "SELECT *\n",
+    "FROM airline_city ac\n",
+    "WHERE ac.airlineid IN ( `AA`, `WN` ) ;"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ANY or SOME\n",
+    "\n",
+    "The ANY or SOME expressions are used in conjunction with a mathematical operator to check if an attribute from the outer-table is equal to, not equal to, greater than, less than , etc than at least one row in the inner-query.\n",
+    "\n",
+    "This query accomplishes the same exact thing as the IN expression from before:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "SELECT *\n",
+    "FROM airline_city ac\n",
+    "WHERE ac.airlineid = ANY ( \n",
+    "    SELECT airlineid in FROM flight f \n",
+    ") ;"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ALL\n",
+    "\n",
+    "The ALL expressions are used in conjunction with a mathematical operator to check if an attribute from the outer-table is equal to, not equal to, greater than, less than , etc than at all rows in the inner-query"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "SELECT *\n",
+    "FROM airline_city ac\n",
+    "WHERE ac.airlineid = ALL ( \n",
+    "    SELECT airlineid in  FROM flight f \n",
+    ") ;\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SQL & Pandas\n",
+    "\n",
+    "Now that we have a understanding of SQL databases & language and, let’s see if we can tie it back into pandas.\n",
+    "\n",
+    "Ideally, we should be able to pull data from a postgres database, do some data transformation to the pulled data using pandas, and load it back.\n",
+    "\n",
+    "In the world of databases, we need to familiarize ourselves with a few key-words:\n",
+    "    * Server-Side: Code executed on the database server, most likely in the form of SQL \n",
+    "    * Client-Side: Code executed within your local coding environment, i.e. your computer. \n",
+    "\n",
+    "In order to query our data & manipulate it using pandas, we must once again rely on packages or modules.\n",
+    "\n",
+    "We will rely on psycopg2: https://www.psycopg.org/docs/ \n"
    ]
   },
   {
@@ -113,6 +318,22 @@
     "\n",
     "# print out the first 5 rows of your dataframe!\n",
     "df.head()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extra Problems & Resources\n",
+    "\n",
+    "* (Easy) https://leetcode.com/problems/combine-two-tables/ \n",
+    "* (Medium) https://leetcode.com/problems/rank-scores/ \n",
+    "* (Medium) https://leetcode.com/problems/exchange-seats/ \n",
+    "* SQL Lab Optional Challenge \n",
+    "* SQL Optional Coding Challenge Q6 - Q9 \n",
+    "* Kaggle SQL BigQuery : https://www.kaggle.com/learn/intro-to-sql (Google Standard SQL)\n",
+    "    * Tutorials & Exercises 1, 3, 5, 7"
    ]
   }
  ],
