--- a/phase_2/week_3/assessment/review.ipynb
+++ b/phase_2/week_3/assessment/review.ipynb
@@ -457,14 +457,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write code here\n",
-    "class Cooridinate:\n",
-    "    def __init__(self, x, y):\n",
-    "        self.x = x\n",
-    "        self.y = y\n",
-    "    \n",
-    "    def get_distance(self):\n",
-    "        return ((self.x ** 2) + (self.y ** 2)) ** (1/2)"
+    "# write code here\n"
    ]
   },
   {
@@ -505,7 +498,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.7 (tags/v3.10.7:6cc6b13, Sep  5 2022, 14:08:36) [MSC v.1933 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
