--- a/phase_2/week_7/Lab/sql_II_lab_notes.ipynb
+++ b/phase_2/week_7/Lab/sql_II_lab_notes.ipynb
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
        "4        AA            Tampa International airport  TPA"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +326,7 @@
     "conn = psycopg2.connect(**params_dic)\n",
     "\n",
     "cursor = conn.cursor()\n",
-    "cursor.execute(\"SELECT * FROM airline_city\")\n",
+    "cursor.execute(\"SELECT * FROM real_flight \")\n",
     "rows = cursor.fetchall()\n",
     "print(rows)\n",
     "\n",
@@ -408,7 +408,7 @@
     "* SQL Lab Optional Challenge \n",
     "* SQL Optional Coding Challenge Q6 - Q9 \n",
     "* Kaggle SQL BigQuery : https://www.kaggle.com/learn/intro-to-sql (Google Standard SQL)\n",
-    "    * Tutorials & Exercises 1, 3, 5, 7"
+    "    * Tutorials & Exercises 1, 3, 5, 6"
    ]
   }
  ],
@@ -428,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.7 (tags/v3.10.7:6cc6b13, Sep  5 2022, 14:08:36) [MSC v.1933 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
