--- a/phase_2/week_7/Lab/sql_II_lab_notes.ipynb
+++ b/phase_2/week_7/Lab/sql_II_lab_notes.ipynb
@@ -226,96 +226,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('AA', 'Louisville International airport', 'SDF'), ('AA', 'John F. Kennedy International airport', 'JFK'), ('AA', 'LaGuardia Airport', 'LGA'), ('AA', 'George Bush Intercontinental airport', 'IAH'), ('AA', 'Tampa International airport', 'TPA'), ('AA', 'Austin-Bergstrom International Airport', 'AUS'), ('AA', 'Hartsfield-Jackson Atlanta International Airport', 'ATL'), ('UAL', 'Louisville International airport', 'SDF'), ('UAL', 'John F. Kennedy International airport', 'JFK'), ('UAL', 'LaGuardia Airport', 'LGA'), ('UAL', 'George Bush Intercontinental airport', 'IAH'), ('UAL', 'San Francisco International airport', 'SFO'), ('UAL', 'Tampa International airport', 'TPA'), ('UAL', 'Austin-Bergstrom International Airport', 'AUS'), ('UAL', 'Hartsfield-Jackson Atlanta International Airport', 'ATL'), ('UAL', 'Daniel K. Inouye International Airport', 'HNL'), ('DL', 'Louisville International airport', 'SDF'), ('DL', 'Dallas/Fort Worth International Airport', 'DFW'), ('DL', 'John F. Kennedy International airport', 'JFK'), ('DL', 'LaGuardia Airport', 'LGA'), ('DL', 'San Francisco International airport', 'SFO'), ('DL', 'Austin-Bergstrom International Airport', 'AUS'), ('DL', 'Hartsfield-Jackson Atlanta International Airport', 'ATL'), ('DL', 'Daniel K. Inouye International Airport', 'INH'), ('WN', 'Louisville International airport', 'SDF'), ('WN', 'LaGuardia Airport', 'LGA'), ('WN', 'George Bush Intercontinental airport', 'IAH'), ('WN', 'Dallas/Fort Worth International Airport', 'DFW'), ('WN', 'San Francisco International airport', 'SFO'), ('WN', 'Tampa International airport', 'TPA'), ('WN', 'Austin-Bergstrom International Airport', 'AUS'), ('WN', 'Hartsfield-Jackson Atlanta International Airport', 'ATL')]\n"
+     "ename": "OperationalError",
+     "evalue": "connection to server at \"localhost\" (::1), port 5432 failed: FATAL:  database \"flights\" does not exist\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\saidmf\\Desktop\\TKH\\DS_22\\phase_2\\week_7\\Lab\\sql_II_lab_notes.ipynb Cell 16\u001b[0m in \u001b[0;36m<cell line: 12>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_2/week_7/Lab/sql_II_lab_notes.ipynb#X21sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_2/week_7/Lab/sql_II_lab_notes.ipynb#X21sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m params \u001b[39m=\u001b[39m {\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_2/week_7/Lab/sql_II_lab_notes.ipynb#X21sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mhost\u001b[39m\u001b[39m\"\u001b[39m      : \u001b[39m\"\u001b[39m\u001b[39mlocalhost\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_2/week_7/Lab/sql_II_lab_notes.ipynb#X21sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mdbname\u001b[39m\u001b[39m\"\u001b[39m    : \u001b[39m\"\u001b[39m\u001b[39mflights\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_2/week_7/Lab/sql_II_lab_notes.ipynb#X21sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mport\u001b[39m\u001b[39m\"\u001b[39m : \u001b[39m\"\u001b[39m\u001b[39m5432\u001b[39m\u001b[39m\"\u001b[39m     \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_2/week_7/Lab/sql_II_lab_notes.ipynb#X21sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m }\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_2/week_7/Lab/sql_II_lab_notes.ipynb#X21sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m conn \u001b[39m=\u001b[39m psycopg2\u001b[39m.\u001b[39mconnect(\u001b[39m*\u001b[39m\u001b[39m*\u001b[39mparams)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_2/week_7/Lab/sql_II_lab_notes.ipynb#X21sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m cursor \u001b[39m=\u001b[39m conn\u001b[39m.\u001b[39mcursor()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_2/week_7/Lab/sql_II_lab_notes.ipynb#X21sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m cursor\u001b[39m.\u001b[39mexecute(\u001b[39m\"\u001b[39m\u001b[39mSELECT * FROM real_flight \u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Python310\\lib\\site-packages\\psycopg2\\__init__.py:122\u001b[0m, in \u001b[0;36mconnect\u001b[1;34m(dsn, connection_factory, cursor_factory, **kwargs)\u001b[0m\n\u001b[0;32m    119\u001b[0m     kwasync[\u001b[39m'\u001b[39m\u001b[39masync_\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m kwargs\u001b[39m.\u001b[39mpop(\u001b[39m'\u001b[39m\u001b[39masync_\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m    121\u001b[0m dsn \u001b[39m=\u001b[39m _ext\u001b[39m.\u001b[39mmake_dsn(dsn, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[1;32m--> 122\u001b[0m conn \u001b[39m=\u001b[39m _connect(dsn, connection_factory\u001b[39m=\u001b[39mconnection_factory, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwasync)\n\u001b[0;32m    123\u001b[0m \u001b[39mif\u001b[39;00m cursor_factory \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    124\u001b[0m     conn\u001b[39m.\u001b[39mcursor_factory \u001b[39m=\u001b[39m cursor_factory\n",
+      "\u001b[1;31mOperationalError\u001b[0m: connection to server at \"localhost\" (::1), port 5432 failed: FATAL:  database \"flights\" does not exist\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>airlineid</th>\n",
-       "      <th>ap_name</th>\n",
-       "      <th>code</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>AA</td>\n",
-       "      <td>Louisville International airport</td>\n",
-       "      <td>SDF</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>AA</td>\n",
-       "      <td>John F. Kennedy International airport</td>\n",
-       "      <td>JFK</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>AA</td>\n",
-       "      <td>LaGuardia Airport</td>\n",
-       "      <td>LGA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>AA</td>\n",
-       "      <td>George Bush Intercontinental airport</td>\n",
-       "      <td>IAH</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>AA</td>\n",
-       "      <td>Tampa International airport</td>\n",
-       "      <td>TPA</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  airlineid                                ap_name code\n",
-       "0        AA       Louisville International airport  SDF\n",
-       "1        AA  John F. Kennedy International airport  JFK\n",
-       "2        AA                      LaGuardia Airport  LGA\n",
-       "3        AA   George Bush Intercontinental airport  IAH\n",
-       "4        AA            Tampa International airport  TPA"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "import psycopg2\n",
     "import pandas as pd\n",
     "\n",
-    "params_dic = {\n",
+    "params = {\n",
     "    \"host\"      : \"localhost\",\n",
     "    \"dbname\"    : \"flights\",\n",
     "    \"user\"      : \"postgres\",\n",
@@ -323,7 +254,7 @@
     "    \"port\" : \"5434\"     \n",
     "}\n",
     "\n",
-    "conn = psycopg2.connect(**params_dic)\n",
+    "conn = psycopg2.connect(**params)\n",
     "\n",
     "cursor = conn.cursor()\n",
     "cursor.execute(\"SELECT * FROM real_flight \")\n",
