--- a/phase_2/week_9/1_30/explore.ipynb
+++ b/phase_2/week_9/1_30/explore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,13 @@
     "    \"password\"  : \"password\",\n",
     "    \"port\" : \"5434\"     \n",
     "}\n",
+    "\n",
+    "def func(host, dbname, user, password, port):\n",
+    "    return \"connection successful\"\n",
+    "\n",
+    "\n",
+    "x = func(host=\"localhost\", dbname=\"flight\", user=\"user\", password=\"password\", port=\"5434\")\n",
+    "print(x)\n",
     "\n",
     "# try-except\n",
     "conn = psycopg2.connect(**params)\n",
